2013-05-18 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp: add UDT into the type list

2013-05-17 John Wu <John dot Wu at ACM dot org>
	* src/ibin.cpp: minor adjustments of printing stements in
	bin::setBoundaries, accept binning specifications with prefixes,
	allow spaces aroud equal signs in bin spec

2013-05-16 John Wu <John dot Wu at ACM dot org>
	* examples/ardea.cpp: add space to the default delimiters

2013-05-14 John Wu <John dot Wu at ACM dot org>
	* part.cpp: initialize ierr based on the warning message from gcc
	4.7.0

2013-04-15 John Wu <John dot Wu at ACM dot org>
	* win/Win.mak: change DLL_EXPORTS to DLL_EXPORT suggested by
	Sebastien Schneider

2013-04-13 John Wu <John dot Wu at ACM dot org>
	* Makefile.am, configure.ac: add option --enable-contrib to
	compile code in the contrib directory per suggestion of Petr Valen
	* src/util.cpp: update ibis::util::read following the report from
	Rock Wang to avoid using SSIZE_MAX (even though the POSIX standard
	promises it to be the upper bound of read operation)

2013-04-13 Petr Valen <petr dot velan at cesnet dot cz>
	* contrib/fbmerbe/Makefile.am: add rule distclean-local

2012-04-12 John Wu <John dot Wu at ACM dot org>
	* src/Makefile.am: add fastbit-config.h to the header files to be
	installed (per suggestion of Petr Valen)

2012-04-11 John Wu <John dot Wu at ACM dot org>
	* src/uti.cpp:648 cast buf to char* before adding the offset
	* src/table.h: add data type UDT in anticipation of future
	expansions

2012-04-10 John Wu <John dot Wu at ACM dot org>
	* src/util.h, src/util.cpp, src/fileManager.cpp: replace UnixRead
	with ibis::util::read to handle the buffer size limitation in
	POSIX read function (pointed out by Rock Wang)

2012-04-03 John Wu <John dot Wu at ACM dot org>
	* Makefile.am, src/Makefile.am, win/xMinGW.Mak: add missing files
	spotted by Dominique Prunier, details at <http://goo.gl/iQaMK>

2012-04-02 John Wu <John dot Wu at ACM dot org>